# arm-examples

./: .gitignore  CMakeLists.txt  README.md  STM32F302x8.cmake  flash-stm32f302r8
code/: main.c  system.c
examples/shared/: system.c
examples/spi-master/: main.c
examples/spi-slave/: main.c
